# cocktails

./: .editorconfig  .hgignore  LICENSE  README.md  migrate.py  pyproject.toml
Recipes/: DirtyGirlScout.json  OldPal.json
Schema/: recipe.schema.json
cocktails/: __main__.py  main.py  model.py  search.py  show.py  validate.py
cocktails/notecard/: colors.py  generate.py  geometry.py  textbox.py
cocktails/schema/: recipe.schema.json
ingredients/: AllspiceDram.yaml  ButterRum.yaml  ColdBrew.json  ColdBrew.yaml  Falernum.yaml  Orgeat.yaml  RichSimple.json  RichSimple.yaml  Saline.json  Saline.yaml  SweetAndSour.yaml
notecard/: __main__.py  generate.py  textbox.py
packing/: __main__.py  main.py
recipes/: AdiosMotherfucker.yaml  BloodyMary.json  BloodyMary.yaml  Bushwacker.json  Bushwacker.yaml  Butterbeer.yaml  CableCar.yaml  Daiquiri.yaml  DarkAndStormy.yaml  DirtyGirlScout.json  DirtyGirlScout.yaml  DirtyMartini.json  DirtyMartini.yaml  EspressoMartini.json  EspressoMartini.yaml  FrozenMargarita.json  FrozenMargarita.yaml  HotButteredRum.yaml  ImprovedWhiskeyCocktail.yaml  KeyLimeMartini.json  KeyLimeMartini.yaml  LeftHand.yaml  LemonDrop.json  LemonDrop.yaml  MaiTai.yaml  MiamiVice.yaml  MiniBeers.json  MiniBeers.yaml  MintMojito.json  MintMojito.yaml  MoscowMule.yaml  OldFashioned.json  OldFashioned.yaml  OldPal.json  OldPal.yaml  Painkiller.yaml  PinaColada.json  PinaColada.yaml  PiratesCove.json  PiratesCove.yaml  (+10 more)
schema/: recipe.schema.json
