[tool.poetry]
name = "cocktails"
version = "0.1.0"
description = "Tools to work with coctail recipes."
authors = ["Jared Julien <jaredjulien@exsystems.net>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "notecard" }
]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"
img2pdf = "^0.4.4"

[tool.poetry.scripts]
notecard = "notecard.generate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
